--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,24 +8,50 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v4
+
+      # Setup Python
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - run: pip install -r requirements.txt
-      - run: pytest -q
+
+      # Install dependencies if requirements.txt exists
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            echo "No requirements.txt found, skipping."
+          fi
+
+      # Run tests using pytest
+      - name: Run tests
+        run: |
+          if ls test_*.py 1> /dev/null 2>&1; then
+            pytest -q
+          else
+            echo "No test files found, skipping tests."
+          fi
 
   build:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v4
-      - uses: docker/login-action@v2
+
+      # Login to DockerHub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v4
+
+      # Build and push Docker image
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v4
         with:
-          context: .
+          context: 
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/lab1-cicd:latest
